@@ -8,6 +8,7 @@
 * Fix - Fixed the un-prefixed functions
 * Fix - Refactored the recipes functions
 * Fix - Changing all the kg's and cm's in the detail boxes to just kg and cm (no plural).
+* Fix - Making sure the wrapper for the tip carousel doesnt output if there are not tips assigned.
 
 ### 1.2.0 - 19 December 2019
 * Dev - Added in translatable endpoint settings.
